--- a/package.json
+++ b/package.json
@@ -2,11 +2,20 @@
   "name": "thng-resource-mappings",
   "version": "0.0.5",
   "description": "Contains mappings between EVRYTHNG and external entities",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "scripts": {
+    "compile": "webpack"
+  },
   "keywords": [
     "mappings",
     "evrythng"
   ],
   "author": "EVRYTHNG Team",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-loader": "^7.1.3",
+    "babel-preset-env": "^1.6.1",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.9"
+  }
 }
